# engine_sandbox

./: CMakeLists.txt
cmake/: fetch_dependencies.cmake
cmake/dependencies/: ecs.cmake  engine.cmake  sprites.cmake
src/: CMakeLists.txt  app.cpp  app.h  assets.cpp  assets.cpp.in  assets.h  main.cpp  position.h  rotation.h  sprite_renderer.cpp  sprite_renderer.h
